...

    <!--login screen strings-->
    <string name="logo_content_description">logo</string>
    <string name="login_header">Enter Login Credentials</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">login</string>
    <string name="showPassword">show</string>
    <string name="hidePassword">hide</string>
    <string name="validatingMessage">Validating Credentials...</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="searchid">Search by UserID</string>
    <string name="searchlobbyid">Search by LobbyID</string>

    <string name="login_failed">Invalid login credentials. Try Again</string>
    <string name="login_error">Login Error</string>
...
    <string name="signup_error">Account Creation Error</string>

    <!--main menu strings-->
    <string name="id_display">ID: %d</string>

    <string name="join_game_button">JOIN GAME</string>
    <string name="host_game_button">HOST GAME</string>
    <string name="leaderboards_button">LEADERBOARD</string>
    <string name="logout_button">LOGOUT</string>

    <!--user menu strings-->
    <string name="add_friends_button">Add Friends</string>
    <string name="user_id_display">User Id: %d</string>
    <string name="games_played_display">Games Played: %d</string>
    <string name="games_won_display">Games Won: %d</string>
    <string name="teams_button">Teams</string>

    <!--user settings strings-->
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="new_username">New Username:</string>
    <string name="new_password">New Password:</string>
    <string name="old_password">Old Password:</string>
    <string name="change_button">Change</string>

    <!--game lobby strings-->
    <string name="pre_game_lobby">Pre-Game Lobby</string>
    <string name="players">Players:</string>
    <string name="player_count">%d (min 2)</string>
    <string name="start_game">Start Game</string>
    <string name="ready">Ready</string>
    <string name="unready">Unready</string>
    <string name="game_code">Code: %1$s</string>
    <string name="waiting_for_players">Waiting for Players</string>

    <!-- Leaderboard screen-->
    <string name="global">Global</string>
    <string name="friends">Friends</string>
    <string name="games_played">Games Played</string>
    <string name="games_won">Games Won</string>
    <string name="team_wins">Team wins</string>

    <!-- Admin Screen-->
    <string name="admin_screen">Admin Page</string>
...
    <string name="promote">Promote to Admin</string>

    <!-- Teams Screen -->
    <string name="teams_page">Teams Page</string>
    <string name="join_team">Join</string>
    <string name="view_teams">View</string>
    <string name="create_teams">Create</string>
    <string name="search_team">Search by TeamID</string>
    <string name="leader">Leader</string>

    <!--chat strings-->
    <string name="message_error">Couldn\'t connect to messages</string>
    <!-- TODO: Remove or change this placeholder text -->
...
