<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="290dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center"
    android:background="@color/dark_gray">


    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Team Name:"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="?attr/colorSecondary"
            />


        <EditText
            android:id="@+id/name_prompt"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:textColor="?attr/colorSecondary"
            android:backgroundTint="?attr/colorSecondary"
            android:textColorHint="?attr/colorSecondary"
            />
        <Button
            android:id="@+id/privateButton"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Private(off)"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="?attr/colorPrimary"
            android:backgroundTint="?attr/colorSecondary"
            />

        <Button
            android:id="@+id/create"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="Create Team"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorSecondary"
            />

    </LinearLayout>

</LinearLayout>