...
            <Button
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/teams_button"
                android:id="@+id/teams"
                android:backgroundTint="?attr/colorSecondary"
                android:textColor="?attr/buttonTint"
                />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:id="@+id/results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

            </LinearLayout>
...
